--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+{% extends 'base.html' %}
+{% block title %}
+Results
+{% endblock %}
+{% block content %}
 <h1>{{question.question_text}}</h1>
 <ul>
     {% for choice in question.choice_set.all %}
@@ -12,5 +17,6 @@
     {% endfor %}
 </ul>
 <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+{% endblock %}
 </body>
 </html>
