--- a/bookmark/templates/bookmark/bookmark_detail.html
+++ b/bookmark/templates/bookmark/bookmark_detail.html
@@ -6,5 +6,8 @@ Detail
 
 {% block content %}
 {{object.site_name}}</br>
-{{object.url}}
+{{object.url}}</br>
+<td><a href="{% url 'bookmark:update' pk=bookmark.id %}" class="btn btn-success btn-sm">Modify</a></td>
+<a href="{% url 'bookmark:delete' pk=bookmark.id%}" class="btn btn-danger btn-sm">Delete</a></td>
 {% endblock %}
+
