--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+{% extends 'base.html' %}
+{% block title %}
+Detail
+{% endblock %}
+{% block content %}
+
 <h1>{{question.question_text}}</h1>
 {% if error_message %}<p><strong>{{error_message}}</strong></p>{% endif %}
 
@@ -16,7 +22,6 @@
     {% endfor %}
     <input type = "submit" value = "Vote">
 </form>
-<ul>
-</ul>
+{% endblock %}
 </body>
 </html>
